[package]
name = "quasar-amm"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }
quasar-spl = { git = "https://github.com/blueshift-gg/quasar" }
constant-product-curve = { git = "https://github.com/rohitdevsol/constant-product-curve.git" }

solana-instruction = { version = "3.2.0" }

[dev-dependencies]
# quasar-amm-client = { path = "target/client/rust/quasar-amm-client" }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
